--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
       type="image/svg+xml"
       href="https://cdn-media.choiceqr.com/prod-eat-baranchik-kremenchuk/logo/thumbnail_ucqRJfB-iEFVQfJ-kPyPiOl_R-W-i.png"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Baranchik Inventory</title>
+    <!-- PWA manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <!-- Android: цвет статус-бара -->
+    <meta name="theme-color" content="#ffffff" />
+    <!-- iOS: запускать как приложение -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Baranchik Inventory" />
+    <link rel="apple-touch-icon" href="vite.svg" />
   </head>
   <body class="h-full min-h-screen">
     <div id="root"></div>
