--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://cdn-media.choiceqr.com/prod-eat-baranchik-kremenchuk/logo/thumbnail_ucqRJfB-iEFVQfJ-kPyPiOl_R-W-i.png"
-    />
+    <link rel="icon" type="image/png" href="https://cdn-media.choiceqr.com/prod-eat-baranchik-kremenchuk/logo/thumbnail_ucqRJfB-iEFVQfJ-kPyPiOl_R-W-i.png" />
+    <link rel="apple-touch-icon" href="https://cdn-media.choiceqr.com/prod-eat-baranchik-kremenchuk/logo/thumbnail_ucqRJfB-iEFVQfJ-kPyPiOl_R-W-i.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Baranchik Inventory</title>
     <!-- PWA manifest -->
@@ -17,7 +14,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Baranchik Inventory" />
-    <link rel="apple-touch-icon" href="vite.svg" />
   </head>
   <body class="h-full min-h-screen">
     <div id="root"></div>
